<resources>
    <string name="app_name">WanAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="wanandroid_title">WanAndroid</string>
    <string name="account_name">用户名：</string>
    <string name="login_account_name_hint">请输入用户名</string>
    <string name="account_secret">密码：</string>
    <string name="login_account_secret_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_title">注册</string>
    <string name="collect_str">收藏</string>
    <string name="todo_str">ToDO</string>
    <string name="sign_out">退出</string>
    <string name="home_page">首页</string>
    <string name="home_project">项目</string>
    <string name="home_navigation">导航</string>
    <string name="home_public_number">公众号</string>
    <string name="article_item_author">作者:&#160;%1$s</string>
    <string name="article_item_update_time">时间:&#160;%1$s</string>
    <string name="publish_time_minute">%1$s分钟前</string>
    <string name="publish_time_hour">%1$s小时前</string>
    <string name="publish_time_day">%1$s天前</string>
</resources>
