<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ededed">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f889f5"
            android:textSize="40sp"
            android:text="@string/wanandroid_title"
            android:layout_marginTop="60dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
            android:id="@+id/login_account_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"/>

        <EditText
                android:id="@+id/login_account_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account_name_hint"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/login_account_secret_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@+id/login_account_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/account_secret"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"/>

        <EditText
                android:id="@+id/login_account_secret_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account_secret_hint"/>
    </LinearLayout>

    <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="@drawable/common_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_account_secret_layout"/>

    <TextView
            android:id="@+id/login_layout_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>