<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ededed">

    <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f889f5"
            android:textSize="40sp"
            android:text="@string/register_title"
            android:layout_marginTop="60dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/register_account_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@+id/register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/register_account_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account_name_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/register_account_secret_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/register_account_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/register_account_secret_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_account_secret_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_register_account_secret_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintTop_toBottomOf="@+id/register_account_secret_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/confirm_account_secret_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_account_secret_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="@drawable/common_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_register_account_secret_layout"/>

</android.support.constraint.ConstraintLayout>